# eu-projects-msl

./: .gitignore  README.md  __init__.py  app.py  chain.py  confs.py  datamodels.py  env  env.sample  euprojects.py  eval_report.csv  ga.txt  load_docs.py  main.py  models.py  pyproject.toml  query.py  readpdfs.py  requirements.txt  test.py  tests.ipynb
.github/workflows/: pylint.yml
euprojectsrag/: __init__.py  chain.py  confs.py  datamodels.py  query.py  readpdfs.py
misc/: duck.py  pages_wordcount.py  pdf_generator.py
src/: app.py  conole.py  main.py
src/euprojectsrag/: __init__.py  configurations.py  data_models.py  file_reader.py  prompts.py  rag_chain.py
test_evals/: __init__.py  eu_rag_completion_fn.py  eu_rag_eval_fn.py
test_evals/data/: tests.jsonl
test_evals/evals/: euprojects_eval.yaml  spectro_eval.yaml
tests/: __init__.py  eu_rag_completion_fn.py  eu_rag_eval_fn.py
tests/completion_fns/: eu_rag.yaml
tests/data/: tests.jsonl
